--- a/src/app/components/hand/hand.component.html
+++ b/src/app/components/hand/hand.component.html
@@ -3,8 +3,19 @@
   <button type="button" (click)="searchCard()">Buscar Carta</button>
 </div>
 
-@if (cardName != '') {
+@if (card) {
 <div>
-  <img style="width: 350px; height: auto;" [src]="cardImage" alt="Card Image" />
+  <h3>{{ card.name }}</h3>
+  <img [src]="card.image_uris?.normal" alt="{{ card.name }}" style="width: 150px; height: auto;">
+  <p><strong>Type:</strong> {{ card.type_line }}</p>
+  <p><strong>Oracle Text:</strong> {{ card.oracle_text }}</p>
+  <p><strong>Mana Cost:</strong> {{ card.mana_cost }}</p>
+  <p><strong>CMC:</strong> {{ card.cmc }}</p>
+  @if (card.power && card.toughness) {
+  <p><strong>Power/Toughness:</strong> {{ card.power }}/{{ card.toughness }}</p>
+  }
+  <p><strong>Keywords:</strong> {{ card.keywords?.join(', ') }}</p>
+  <p><strong>Produced Mana:</strong> {{ card.produced_mana?.join(', ') }}</p>
+
 </div>
 }
