--- a/src/app/components/hand/hand.component.html
+++ b/src/app/components/hand/hand.component.html
@@ -1,23 +1,1 @@
-<div>
-  <textarea  type="text" name="task" rows="3" [(ngModel)]="deckInput" placeholder="Pega tu mazo aquí..."></textarea>
-  <button type="button" (click)="processDeckInput()">Cargar Mazo</button>
-</div>
-
-@if (deckCards.length > 0) {
-  @for (card of deckCards; track card.id) {
-<div>
-  <h3>{{ card.name }}</h3>
-  <img [src]="card.image_uris?.normal" alt="{{ card.name }}" style="width: 250px; height: auto;">
-  <p><strong>Type:</strong> {{ card.type_line }}</p>
-  <p><strong>Oracle Text:</strong> <span [innerHTML]="card.sanitizedOracleText"></span></p>
-  <p><strong>Mana Cost:</strong> <span [innerHTML]="card.sanitizedManaCost"></span></p>
-  <p><strong>CMC:</strong> {{ card.cmc }}</p>
-  @if (card.power && card.toughness) {
-  <p><strong>Power/Toughness:</strong> {{ card.power }}/{{ card.toughness }}</p>
-  }
-  <p><strong>Keywords:</strong> {{ card.keywords?.join(', ') }}</p>
-  <p><strong>Produced Mana:</strong> <span [innerHTML]="card.sanitizedProducedMana"></span></p>
-
-</div>
-}
-}
+<p>Hand works!</p>
