--- a/src/app/components/deck-processor/deck-processor.component.html
+++ b/src/app/components/deck-processor/deck-processor.component.html
@@ -7,22 +7,22 @@
   <div class="row">
     @for (card of deckCards; track card.id) {
       @defer (on viewport){
-      <div class="col-md-6 mb-3">
-        <div class="card">
-          <div class="card-body text-center">
-            <h3 style="font-size: 20px">{{ card.quantity + " " + card.name}}</h3>
-            <img [src]="card.image_uris?.normal" alt="{{ card.name }}" class="img-fluid" style="max-width: 100%; height: auto;">
-            <!-- Mostrar botón de Transformar solo si la carta tiene dos caras -->
-            @if (card.card_faces) {
-              <button (click)="toggleCardFace(card)">Transformar</button>
-            }
+        <div class="col-md-6 mb-3">
+          <div class="card">
+            <div class="card-body text-center">
+              <h3 style="font-size: 20px">{{ card.quantity + " " + (card.combinedName || card.name)}}</h3>
+              <img [src]="card.image_uris?.normal" alt="{{ card.name }}" class="img-fluid" style="max-width: 100%; height: auto;">
+              <!-- Mostrar botón de Transformar solo si la carta tiene dos caras -->
+              @if (card.card_faces) {
+                <button (click)="toggleCardFace(card)">Transformar</button>
+              }
+            </div>
           </div>
         </div>
-      </div>
       }
-        @placeholder {
-          <p>Carta por cargar</p>
-        }
+      @placeholder {
+        <p>Carta por cargar</p>
+      }
     }
   </div>
 }
