--- a/src/app/components/deck-processor/deck-processor.component.html
+++ b/src/app/components/deck-processor/deck-processor.component.html
@@ -1,5 +1,5 @@
 <div>
-  <textarea type="text" name="task" rows="3" [(ngModel)]="deckInput" placeholder="Pega tu mazo aquí..."></textarea>
+  <textarea type="text" name="task" rows="3" [(ngModel)]="deckInput" placeholder="Pega tu mazo aquí... (Formato MTGO)"></textarea>
   <button type="button" (click)="processDeckInput()">Cargar Mazo</button>
 </div>
 
@@ -22,6 +22,7 @@
               @if (card.card_faces && !card.isSingleImageDoubleFace) {
                 <button (click)="toggleCardFace(card)">Transformar</button>
               }
+              <p><span [innerHTML]="card.sanitizedOracleText"></span></p>
             </div>
           </div>
         </div>
