--- a/src/app/components/commander/commander.component.html
+++ b/src/app/components/commander/commander.component.html
@@ -1,1 +1,5 @@
-<p>commander works!</p>
+<div class="card" style="height: 100%; display: flex; flex-direction: column;">
+  <div class="card-body text-center" style="flex-grow: 1;">
+    <img [src]="commander?.image_uris?.normal" alt="{{ commander?.name }}" class="img-fluid commander-image">
+  </div>
+</div>
