--- a/src/app/components/hand/hand.component.html
+++ b/src/app/components/hand/hand.component.html
@@ -1,5 +1,5 @@
 <div class="hand-container row" style="display: flex; flex-wrap: wrap; justify-content: flex-start;">
-  @for (card of handCards; track card.id) {
+  @for (card of handCards; track card.instanceId) {
   <div class="col-2 col-md-1 card-item">
     @if (card.card_faces && !card.isSingleImageDoubleFace) {
       <img [src]="card.card_faces[card.currentFaceIndex]?.image_uris?.normal" alt="{{ card.name }}" class="img-fluid"
