Unifier Complete, now the cards are duplicated...

--- a/src/app/components/deck-processor/deck-processor.component.html
+++ b/src/app/components/deck-processor/deck-processor.component.html
@@ -22,7 +22,7 @@
               @if (card.card_faces && !card.isSingleImageDoubleFace) {
                 <button (click)="toggleCardFace(card)">Transformar</button>
               }
-<!--              <p><span [innerHTML]="card.sanitizedOracleText"></span></p>-->
+              <p><span [innerHTML]="card.sanitizedOracleText"></span></p>
             </div>
           </div>
         </div>
