--- a/src/app/components/graveyard/graveyard.component.html
+++ b/src/app/components/graveyard/graveyard.component.html
@@ -1,5 +1,5 @@
 <div class="graveyard-container">
-  <img src="../public/missing-image.png"
+  <img [src]="lastGraveImage"
        alt="Graveyard"
        class="graveyard-image"
        (click)="openModal()">
