el movimiento entre zonas añadido mano y campo de batalla, funcionan correctamente, junto a biblioteca, cementerio, exilio y sideboard
Faltara la PILA (deseadme suerte)

--- a/src/app/components/battlefield/battlefield.component.html
+++ b/src/app/components/battlefield/battlefield.component.html
@@ -68,6 +68,14 @@
       </div>
     </div>
 
+    @if (selectedCardForDetails && modalVisible) {
+      <app-card-detail
+        [card]="selectedCardForDetails"
+        [visible]="modalVisible"
+        (closed)="modalVisible = false">
+      </app-card-detail>
+    }
+
     <div class="col mt-4">
 
       @if (originalDeckCards >= 99) {
