--- a/src/app/components/permanent-card/permanent-card.component.html
+++ b/src/app/components/permanent-card/permanent-card.component.html
@@ -23,7 +23,8 @@
     <ul>
       <li (click)="castSpell(selectedCard!)">Lanzar hechizo</li>
       <li (click)="viewDetails(selectedCard!)">Ver detalles</li>
-      <li (click)="moveToExile(selectedCard!)">Exiliar</li>
+      <li (click)="moveToGraveyard(selectedCard!)">Destruir</li>
+      <li (click)="moveToHand(selectedCard!)">Devolver a la Mano</li>
     </ul>
   </div>
 }
