--- a/src/app/components/commander/commander.component.css
+++ b/src/app/components/commander/commander.component.css
@@ -3,3 +3,25 @@
   max-width: 100px;  /* Ajusta esto según el tamaño que desees para la imagen */
   object-fit: contain;  /* Esto asegura que la imagen no se distorsione */
 }
+
+.context-menu {
+  position: absolute;
+  background-color: white;
+  border: 1px solid #ccc;
+  box-shadow: 2px 2px 6px rgba(0,0,0,0.2);
+  z-index: 9999;
+  padding: 0.5rem;
+  border-radius: 6px;
+}
+.context-menu ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.context-menu ul li {
+  padding: 0.25rem 0.75rem;
+  cursor: pointer;
+}
+.context-menu ul li:hover {
+  background-color: #eee;
+}
