toggle en detailscreen (no funcional)

--- a/src/app/components/card-detail/card-detail.component.html
+++ b/src/app/components/card-detail/card-detail.component.html
@@ -4,10 +4,16 @@
     <button class="close-btn" (click)="close()">×</button>
     <div class="card-info">
       <img [src]="card?.image_uris?.normal" alt="{{ card?.name }}" class="img-fluid mb-3" />
+      @if (card?.card_faces?.length > 1 && !card.isSingleImageDoubleFace) {
+        <button (click)="toggleCardFace()" class="btn btn-secondary mt-2">
+          Cambiar cara
+        </button>
+      }
       <h3>{{ card.name }}</h3>
-      <p><strong>Tipo:</strong> {{ card.type_line }}</p>
-      <p><strong>Texto:</strong><span [innerHTML]="card.sanitizedOracleText"></span></p>
-      <p><strong>Coste de maná:</strong><span [innerHTML]="card.sanitizedManaCost"></span></p>
+      <p><strong>Tipo: </strong> {{ card.type_line }}</p>
+      <p><strong>Texto: </strong><span [innerHTML]="card.sanitizedOracleText"></span></p>
+      <p><strong>Coste de maná: </strong><span [innerHTML]="card.sanitizedManaCost"></span></p>
+      <p><strong>CMC: </strong> <span [innerHTML]="card.cmc"></span></p>
       <!-- Agrega más campos si quieres -->
     </div>
   </div>
