--- a/src/app/components/permanent-card/permanent-card.component.html
+++ b/src/app/components/permanent-card/permanent-card.component.html
@@ -21,10 +21,10 @@
     [style.left.px]="contextMenuPosition.x"
     (click)="contextMenuVisible = false">
     <ul>
-      <li (click)="castSpell(selectedCard!)">Lanzar hechizo</li>
+      <li (click)="castSpell(selectedCard!)">A</li>
       <li (click)="viewDetails(selectedCard!)">Ver detalles</li>
-      <li (click)="moveToGraveyard(selectedCard!)">Destruir</li>
       <li (click)="moveToHand(selectedCard!)">Devolver a la Mano</li>
+      <li (click)="moveToGraveyard(selectedCard!)">Destruir</li>
     </ul>
   </div>
 }
