--- a/src/app/components/zone-viewer/zone-viewer.component.html
+++ b/src/app/components/zone-viewer/zone-viewer.component.html
@@ -41,7 +41,7 @@
                 @if (isExile()) {
                   <button class="btn btn-success btn-sm" (click)="moveToZone(card, 'hand')">A la Mano</button>
                   <button class="btn btn-warning btn-sm" (click)="moveToZone(card, 'library')">Al Mazo</button>
-                  <button class="btn btn-info btn-sm" (click)="moveToZone(card, 'battlefield')">Al Campo</button>
+                  <button class="btn btn-info btn-sm" (click)="moveToZone(card, 'stack')">Lanzar Hechizo</button>
                 }
 
                 <!-- Botones para zona Library -->
