--- a/src/app/components/battlefield/battlefield.component.html
+++ b/src/app/components/battlefield/battlefield.component.html
@@ -26,7 +26,7 @@
 <div class="container mt-6">
 
   <div class="row">
-    <div class="col mt-4">
+    <div class="col">
       <app-stack></app-stack>
     </div>
     <div class="col-12 col-md-9 mb-4">
