--- a/src/app/components/stack/stack.component.html
+++ b/src/app/components/stack/stack.component.html
@@ -1,4 +1,4 @@
-
+<p>{{ stackCards.length }}</p>
   @if (stackCards.length > 0) {
     <div class="card-in-stack p-4 border rounded shadow bg-gray-100">
       <p class="text-lg font-semibold">
@@ -14,13 +14,13 @@
       ></div>
       }
     </div>
-  } @else {
-    <p class="text-gray-500">No hay hechizos en la pila.</p>
-  }
 
   <button
     class="mt-3 btn btn-primary"
     (click)="moveTopStackCardToBattlefield()"
   >
-    Resolver y mover al campo de batalla
+    Resolver
   </button>
+  } @else {
+    <p class="text-gray-500">No hay hechizos en la pila.</p>
+  }
